--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -17,10 +17,18 @@ Choose Dataset:
 
 ```
 # Library
-library(name)
+library(janitor)
+library(dplyr)
+library(stringr)
+library(tidyr)
+library(assertive)
+library(readr)
+library(psych)
+library(data.table)
+library(ggplot2)
 
 # Dataset
-dataset <- read_csv("")
+SuperStore  <- read.csv("C:/Users/Admin/Desktop/int214/train.csv/train.csv")
 ```
 
 In this dataset has .....
