--- a/assignment/HW04_63130500138/63130500138.md
+++ b/assignment/HW04_63130500138/63130500138.md
@@ -1,4 +1,4 @@
-R-Assignment 4
+# R-Assignment 4
 
 Created by Kantapon Tantrapornpong (ID: 63130500138)
 
@@ -11,9 +11,9 @@ Explore the dataset
 Learning function from Tidyverse
 Transform data with dplyr and finding insight the data
 Visualization with GGplot2
-Part 1: Explore the dataset
+#  Part 1: Explore the dataset
 
-# Library
+#   Library
 library(janitor)
 library(dplyr)
 library(stringr)
@@ -22,11 +22,11 @@ library(assertive)
 library(readr)
 library(psych)
 library(data.table)
- de
-# Dataset
+
+#   Dataset
 book_data <- read.csv("/Users/kantapontantrapornpong/Downloads/prog_book.csv")
 
-Rows: 9,800
+```Rows: 9,800
 Columns: 18
 $ Row.ID        <int> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, …
 $ Order.ID      <chr> "CA-2017-152156", "CA-2017-152156", "CA-2017-138688", "US-2016-108966", "US…
@@ -46,14 +46,16 @@ $ Category      <chr> "Furniture", "Furniture", "Office Supplies", "Furniture", 
 $ Sub.Category  <chr> "Bookcases", "Chairs", "Labels", "Tables", "Storage", "Furnishings", "Art",…
 $ Product.Name  <chr> "Bush Somerset Collection Bookcase", "Hon Deluxe Fabric Upholstered Stackin…
 $ Sales         <dbl> 261.9600, 731.9400, 14.6200, 957.5775, 22.3680, 48.8600, 7.2800, 907.1520, …
+```
 
 This dataset contains 9,800 rows and consists of 18 columns. The dataset contains information related to SuperStore, which includes the following topics: Row.ID, Order.ID, Order.Date, Ship.Date, Ship.Mode, Customer.ID, Customer.Name, Segment, Country, City, State, Postal.Code, Region, Product.ID, Category, Sub.Category, Product.Name, Sales
 
-Part 2: Learning function from Tidyverse
+#  Part 2: Learning function from Tidyverse
 
 Function select() from package dplyr). It using for select columns
 #Code here market %>% select(Product.ID,Sales)
 Resule:
+```
  market %>% select(Product.ID,Sales)
          Product.ID     Sales
 1   FUR-BO-10001798  261.9600
@@ -556,9 +558,9 @@ Resule:
 498 FUR-FU-10004864  255.7600
 499 FUR-CH-10002602  241.5680
 500 FUR-FU-10000073   69.3000
-  
+``` 
 
-Part 3: Transform data with dplyr and finding insight the data
+#  Part 3: Transform data with dplyr and finding insight the data
 
 //Explain here
 
@@ -570,7 +572,7 @@ Result:
 
 list 1
 list 2
-Part 4: Visualization with GGplot2
+#  Part 4: Visualization with GGplot2
 
 1.) Graph show relation between height and mass
 
