--- a/assignment/HW04_63130500138/63130500138.md
+++ b/assignment/HW04_63130500138/63130500138.md
@@ -4,16 +4,17 @@ Created by Kantapon Tantrapornpong (ID: 63130500138)
 
 Choose Dataset:
 
-market <- read.csv("/Users/kantapontantrapornpong/Downloads/superstore_sales.csv")
+```market <- read.csv("/Users/kantapontantrapornpong/Downloads/superstore_sales.csv")```
 Outlines
 
 Explore the dataset
 Learning function from Tidyverse
 Transform data with dplyr and finding insight the data
 Visualization with GGplot2
-#  Part 1: Explore the dataset
+## Part 1: Explore the dataset
 
-#   Library
+### Library
+```
 library(janitor)
 library(dplyr)
 library(stringr)
@@ -22,8 +23,9 @@ library(assertive)
 library(readr)
 library(psych)
 library(data.table)
+```
 
-#   Dataset
+### Dataset
 book_data <- read.csv("/Users/kantapontantrapornpong/Downloads/prog_book.csv")
 
 ```Rows: 9,800
@@ -50,7 +52,7 @@ $ Sales         <dbl> 261.9600, 731.9400, 14.6200, 957.5775, 22.3680, 48.8600, 7
 
 This dataset contains 9,800 rows and consists of 18 columns. The dataset contains information related to SuperStore, which includes the following topics: Row.ID, Order.ID, Order.Date, Ship.Date, Ship.Mode, Customer.ID, Customer.Name, Segment, Country, City, State, Postal.Code, Region, Product.ID, Category, Sub.Category, Product.Name, Sales
 
-#  Part 2: Learning function from Tidyverse
+##  Part 2: Learning function from Tidyverse
 
 Function select() from package dplyr). It using for select columns
 #Code here market %>% select(Product.ID,Sales)
