--- a/assignment/HW04_63130500138/63130500138.md
+++ b/assignment/HW04_63130500138/63130500138.md
@@ -4,17 +4,21 @@ Created by Kantapon Tantrapornpong (ID: 63130500138)
 
 Choose Dataset:
 
-```market <- read.csv("/Users/kantapontantrapornpong/Downloads/superstore_sales.csv")```
+Superstore Sales Dataset (Data from Rohit Sahoo,Kaggle) >> Using CSV
+
 Outlines
 
-Explore the dataset
-Learning function from Tidyverse
-Transform data with dplyr and finding insight the data
-Visualization with GGplot2
-## Part 1: Explore the dataset
+1.Explore the dataset
 
-### Library
+2.Learning function from Tidyverse
+
+3.Transform data with dplyr and finding insight the data
+
+4.Visualization with GGplot2
+
+## Part 1: Explore the dataset
 ```
+#Library
 library(janitor)
 library(dplyr)
 library(stringr)
@@ -23,10 +27,12 @@ library(assertive)
 library(readr)
 library(psych)
 library(data.table)
+
+#Dataset
+market <- read.csv("/Users/kantapontantrapornpong/Downloads/superstore_sales.csv")
 ```
 
-### Dataset
-book_data <- read.csv("/Users/kantapontantrapornpong/Downloads/prog_book.csv")
+In this dataset has
 
 ```Rows: 9,800
 Columns: 18
@@ -55,7 +61,9 @@ This dataset contains 9,800 rows and consists of 18 columns. The dataset contain
 ##  Part 2: Learning function from Tidyverse
 
 Function select() from package dplyr). It using for select columns
+
 #Code here market %>% select(Product.ID,Sales)
+
 Resule:
 ```
  market %>% select(Product.ID,Sales)
