--- a/assignment/HW04_63130500138/63130500138.md
+++ b/assignment/HW04_63130500138/63130500138.md
@@ -2,19 +2,19 @@
 
 Created by Kantapon Tantrapornpong (ID: 63130500138)
 
-Choose Dataset:
+### Choose Dataset:
 
-Superstore Sales Dataset (Data from Rohit Sahoo,Kaggle) >> Using CSV
+ Superstore Sales Dataset (Data from Rohit Sahoo,Kaggle) >> Using CSV
 
-Outlines
+### Outlines
 
-1.Explore the dataset
+ 1.Explore the dataset
 
-2.Learning function from Tidyverse
+ 2.Learning function from Tidyverse
 
-3.Transform data with dplyr and finding insight the data
+ 3.Transform data with dplyr and finding insight the data
 
-4.Visualization with GGplot2
+ 4.Visualization with GGplot2
 
 ## Part 1: Explore the dataset
 ```
@@ -60,9 +60,10 @@ This dataset contains 9,800 rows and consists of 18 columns. The dataset contain
 
 ##  Part 2: Learning function from Tidyverse
 
-Function select() from package dplyr). It using for select columns
+2.1 Function select() from package dplyr). It using for select columns
 
-#Code here market %>% select(Product.ID,Sales)
+#Code here 
+```market %>% select(Product.ID,Sales)```
 
 Resule:
 ```
@@ -569,6 +570,11 @@ Resule:
 499 FUR-CH-10002602  241.5680
 500 FUR-FU-10000073   69.3000
 ``` 
+
+2.2 Function select() from package dplyr). It using for select columns
+
+#Code here 
+
 
 #  Part 3: Transform data with dplyr and finding insight the data
 
