--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -28,13 +28,24 @@ library(data.table)
 library(ggplot2)
 
 # Dataset
-SuperStore  <- read.csv("C:/Users/Admin/Desktop/int214/train.csv/train.csv")
+com_science  <- read.csv("C:/Users/Admin/Desktop/int214/prog_book.csv")
 ```
 
 In this dataset has .....
+```
+glimpse(com_science)
 
-
-
+#Output
+Rows: 271
+Columns: 7
+$ Rating          <dbl> 4.17, 4.01, 3.33, 3.97, 4.06, 3.84, 4.09, 4.15,~
+$ Reviews         <chr> "3,829", "1,406", "0", "1,658", "1,325", "117",~
+$ Book_title      <chr> "The Elements of Style", "The Information: A Hi~
+$ Description     <chr> "This style manual offers practical advice on i~
+$ Number_Of_Pages <int> 105, 527, 50, 393, 305, 288, 256, 368, 259, 128~
+$ Type            <chr> "Hardcover", "Hardcover", "Kindle Edition", "Ha~
+$ Price           <dbl> 9.323529, 11.000000, 11.267647, 12.873529, 13.1~
+```
 ## Part 2: Learning function from Tidyverse
 
 - Function `select()` from package [dplyr](https://dplyr.tidyverse.org/articles/dplyr.html#select-columns-with-select)). It using for select columns
