--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -46,6 +46,8 @@ $ Number_Of_Pages <int> 105, 527, 50, 393, 305, 288, 256, 368, 259, 128~
 $ Type            <chr> "Hardcover", "Hardcover", "Kindle Edition", "Ha~
 $ Price           <dbl> 9.323529, 11.000000, 11.267647, 12.873529, 13.1~
 ```
+ใน dataset มี 271 Rows, 7 Columns ที่เป็นข้อมูลของ Computer Science/ Programming book ประกอบด้วย Rating, Reviews, Book_title, Description, Number_of_Pages, Type, Price
+
 ## Part 2: Learning function from Tidyverse
 
 - Function `select()` from package [dplyr](https://dplyr.tidyverse.org/articles/dplyr.html#select-columns-with-select)). It using for select columns
