--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -53,7 +53,7 @@ $ Price           <dbl> 9.323529, 11.000000, 11.267647, 12.873529, 13.1~
 - Function `select()` from package [dplyr](https://dplyr.tidyverse.org/articles/dplyr.html#select-columns-with-select)). It using for select columns
 
 ```
-starwars %>% select(name,height)
+com_science %>% select(Rating,Book_title)
 ```
 ** You can sepearate this part or combine in part of `Transform data with dplyr and finding insight the data`
 
