--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -50,11 +50,17 @@ $ Price           <dbl> 9.323529, 11.000000, 11.267647, 12.873529, 13.1~
 
 ## Part 2: Learning function from Tidyverse
 
-- Function `select()` from package [dplyr](https://dplyr.tidyverse.org/articles/dplyr.html#select-columns-with-select)). It using for select columns
+- Function `select()` from package [dplyr](https://dplyr.tidyverse.org/articles/dplyr.html#select-columns-with-select). It using for select columns
 
 ```
 com_science %>% select(Rating,Book_title)
 ```
+- Function `str_sort` from package [stringr]. It returns the sorted vector.
+
+```
+str_sort(com_science$Rating)
+```
+
 ** You can sepearate this part or combine in part of `Transform data with dplyr and finding insight the data`
 
 ## Part 3: Transform data with dplyr and finding insight the data
