--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -4,7 +4,7 @@
 
 Choose Dataset:
 
-2. Superstore Sales Dataset (Data from Rohit Sahoo,[Kaggle](https://www.kaggle.com/rohitsahoo/sales-forecasting)) >> [Using CSV](https://raw.githubusercontent.com/safesit23/INT214-Statistics/main/datasets/superstore_sales.csv)
+Superstore Sales Dataset (Data from Rohit Sahoo,[Kaggle](https://www.kaggle.com/rohitsahoo/sales-forecasting)) >> [Using CSV](https://raw.githubusercontent.com/safesit23/INT214-Statistics/main/datasets/superstore_sales.csv)
 
 
 ### Outlines
@@ -55,7 +55,7 @@ $ Price           <dbl> 9.323529, 11.000000, 11.267647, 12.873529, 13.1~
 ```
 com_science %>% select(Rating,Book_title)
 ```
-- Function `str_sort` from package [stringr]. It returns the sorted vector.
+- Function `str_sort()` from package `stringr`. It returns the sorted vector.
 
 ```
 str_sort(com_science$Rating)
