--- a/assignment/HW04_63130500138/63130500138.md
+++ b/assignment/HW04_63130500138/63130500138.md
@@ -630,8 +630,9 @@ str_c(market$Row.ID, collapse = ", ")
 1. สินค้าใดบ้างมีราคามากกว่าราคาเฉลี่ยของสินค้าทั้งหมด (แสดงเฉพาะรหัสสินค้า)
 
 #Code here
-```product <- market%>%select(Product.ID,Sales)%>%filter(market$Sales > mean(market$Sales))
-   product
+```
+product <- market%>%select(Product.ID,Sales)%>%filter(market$Sales > mean(market$Sales))
+product
 ```
 Result:
 ```
@@ -1143,8 +1144,9 @@ Result:
 2. Customer คนไหนบ้างที่อยู่ใน United State
 
 #Code here 
-```customer_us <- market%>%select(Customer.Name)%>%filter(market$Country == "United States")%>%distinct
-   customer_us
+```
+customer_us <- market%>%select(Customer.Name)%>%filter(market$Country == "United States")%>%distinct
+customer_us
 ```
 
 Result:
@@ -1949,12 +1951,14 @@ customer_us
 2. สินค้่่าทั้งหมดมีกี่ประเภทมีอะไรบ้าง และ แต่ละประเภทมีสินค้่ามีจำนวนเท่าไหร่
 
 #Code here 
-```product_category_num <- count(market %>%distinct(Category))%>%rename(NumberOfCategory = n)
-   product_category_num
+```
+product_category_num <- count(market %>%distinct(Category))%>%rename(NumberOfCategory = n)
+product_category_num
 ```
 
-```prduct_category <- market %>%count(market$Category)%>% rename(AmountOfCategory = n)
-   prduct_category
+```
+prduct_category <- market %>%count(market$Category)%>% rename(AmountOfCategory = n)
+prduct_category
 ```
 
 Result:
