--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -64,16 +64,21 @@ str_sort(com_science$Rating)
 
 ## Part 3: Transform data with dplyr and finding insight the data
 
-//Explain here
+1.ค่าเฉลี่ยของราคาหนังสือทั้งหมด และหนังสือที่มีราคาแพงที่สุดชื่ออะไร ราคาเท่าไหร่
 
 ```
-#Code here
+mean(com_science$Price)
+com_science %>% select(Book_title,Price) %>% filter(Price == max(Price))
 ```
 
 Result:
 
 ```
-#Copy Result from console to here
+> mean(com_science$Price)
+[1] 54.54186
+> com_science %>% select(Book_title,Price) %>% filter(Price == max(Price))
+                             Book_title  Price
+1 A Discipline for Software Engineering 235.65
 ```
 //Explain
 
