--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -80,10 +80,18 @@ Result:
                              Book_title  Price
 1 A Discipline for Software Engineering 235.65
 ```
-//Explain
+ค่าเฉลี่ยของหนังสือทั้งหมดคือ 54.54186 ,หนังสือที่แพงที่สุดคือ A Discipline for Software Engineering และมีราคา 235.65
 
-- list 1
-- list 2
+2.หนังสือที่มี Rating ต่ำกว่า 4 มีกี่เล่ม
+
+```
+```
+
+Result:
+
+```
+```
+
 
 ## Part 4: Visualization with GGplot2
 ### 1.) Graph show relation between height and mass
