--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -85,11 +85,51 @@ Result:
 2.หนังสือที่มี Rating ต่ำกว่า 4 มีกี่เล่ม
 
 ```
+lessthan4 <- filter(com_science,Rating < 4)
+count(lessthan4)
 ```
 
 Result:
 
 ```
+> lessthan4 <- filter(com_science,Rating < 4)
+> count(lessthan4)
+   n
+1 92
+```
+หนังสือที่มี Rating ต่ำกว่า 4 มีทั้งหมด 92 เล่ม
+
+3.มีหนังสือประเภทอะไรบ้าง และแต่ละประเภทมีหนังสือทั้งหมดกี่เล่ม
+
+```
+com_science %>% distinct(Type)
+amount_book <- com_science %>% count(com_science$Type)
+amount_book
+```
+
+Result:
+
+```
+#ประเภทหนังสือ
+> com_science %>% distinct(Type)
+                   Type
+1             Hardcover
+2        Kindle Edition
+3             Paperback
+4                 ebook
+5       Unknown Binding
+6 Boxed Set - Hardcover
+
+#จำนวนหนังสือแต่ละประเภท
+> amount_book <- com_science %>% count(com_science$Type)
+> amount_book
+       com_science$Type   n
+1 Boxed Set - Hardcover   1
+2                 ebook   7
+3             Hardcover  95
+4        Kindle Edition  10
+5             Paperback 156
+6       Unknown Binding   2
 ```
 
 
