--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -61,6 +61,27 @@ com_science %>% select(Rating,Book_title)
 str_sort(com_science$Rating)
 ```
 
+Result:
+
+```
+> str_sort(com_science$Rating)
+  [1] "3"    "3"    "3"    "3.2"  "3.22" "3.32" "3.33" "3.37" "3.38" "3.45" "3.48" "3.52" "3.56" "3.58" "3.58" "3.59" "3.6" 
+ [18] "3.65" "3.67" "3.67" "3.67" "3.68" "3.68" "3.7"  "3.7"  "3.71" "3.73" "3.73" "3.75" "3.75" "3.76" "3.76" "3.77" "3.77"
+ [35] "3.78" "3.78" "3.78" "3.78" "3.79" "3.82" "3.82" "3.82" "3.82" "3.83" "3.83" "3.83" "3.83" "3.84" "3.84" "3.84" "3.85"
+ [52] "3.86" "3.86" "3.86" "3.87" "3.87" "3.87" "3.87" "3.87" "3.87" "3.88" "3.88" "3.89" "3.9"  "3.91" "3.91" "3.91" "3.91"
+ [69] "3.92" "3.92" "3.93" "3.93" "3.93" "3.93" "3.94" "3.94" "3.94" "3.95" "3.95" "3.96" "3.96" "3.96" "3.96" "3.96" "3.97"
+ [86] "3.97" "3.97" "3.97" "3.97" "3.97" "3.98" "3.98" "4"    "4"    "4"    "4"    "4"    "4"    "4"    "4.01" "4.01" "4.01"
+[103] "4.01" "4.02" "4.02" "4.02" "4.02" "4.03" "4.03" "4.03" "4.03" "4.03" "4.03" "4.04" "4.04" "4.04" "4.05" "4.05" "4.05"
+[120] "4.05" "4.06" "4.06" "4.06" "4.06" "4.08" "4.08" "4.08" "4.08" "4.08" "4.08" "4.09" "4.09" "4.09" "4.1"  "4.1"  "4.1" 
+[137] "4.1"  "4.11" "4.11" "4.11" "4.11" "4.11" "4.11" "4.11" "4.11" "4.12" "4.12" "4.12" "4.13" "4.13" "4.13" "4.13" "4.13"
+[154] "4.14" "4.14" "4.14" "4.15" "4.15" "4.15" "4.15" "4.15" "4.15" "4.15" "4.15" "4.15" "4.16" "4.16" "4.16" "4.16" "4.17"
+[171] "4.17" "4.18" "4.18" "4.18" "4.18" "4.18" "4.18" "4.19" "4.2"  "4.2"  "4.2"  "4.2"  "4.2"  "4.21" "4.21" "4.21" "4.21"
+[188] "4.21" "4.22" "4.22" "4.22" "4.22" "4.23" "4.23" "4.23" "4.23" "4.23" "4.23" "4.23" "4.24" "4.24" "4.25" "4.25" "4.25"
+[205] "4.25" "4.25" "4.25" "4.25" "4.26" "4.27" "4.27" "4.27" "4.28" "4.28" "4.28" "4.28" "4.28" "4.29" "4.29" "4.29" "4.3" 
+[222] "4.3"  "4.31" "4.31" "4.31" "4.32" "4.32" "4.33" "4.33" "4.33" "4.33" "4.33" "4.34" "4.34" "4.34" "4.34" "4.35" "4.35"
+[239] "4.35" "4.35" "4.37" "4.37" "4.37" "4.37" "4.37" "4.39" "4.4"  "4.4"  "4.4"  "4.4"  "4.41" "4.42" "4.42" "4.43" "4.45"
+[256] "4.46" "4.46" "4.49" "4.49" "4.5"  "4.5"  "4.54" "4.54" "4.58" "4.62" "4.62" "4.67" "4.67" "4.72" "4.77" "5" 
+```
 
 ## Part 3: Transform data with dplyr and finding insight the data
 
