--- a/assignment/HW04_63130500135/HW04_63130500135.md
+++ b/assignment/HW04_63130500135/HW04_63130500135.md
@@ -21,9 +21,11 @@ Install package and loading package
 #Explore the dataset
 #Install Package
 install.packages("dplyr")
+install.packages("DescTools")
 
 #Loading package
 library(dplyr)
+library(DescTools)
 ```
 
 Load data from rawgithub
@@ -256,25 +258,173 @@ $ ProductName   <chr> "Bush Somerset Collection Bookcas~
 
 ## Part 3: Transform data with dplyr and finding insight the data
 
-//Explain here
+### 1. What is the highest price in each category?
 
 ```R
-#Code here
+sales %>% group_by(Category) %>% summarize(max_price = max(Sales))
 ```
 
 Result:
 
 ```
-#Copy Result from console to here
+# A tibble: 3 x 2
+  Category        max_price
+  <chr>               <dbl>
+1 Furniture           4416.
+2 Office Supplies     9893.
+3 Technology         22638.
 ```
-//Explain
 
-- list 1
-- list 2
+Explain
+
+- Use group_by() function to group Category.
+- Use Summarize() function to find the max Sales in each Category.
+
+### 2. What is the total sales amount?
+
+```R
+sales %>% summarise(sumsales = sum(Sales))
+```
+
+Result:
+
+```
+  sumsales
+1  2261537
+```
+
+Explain
+
+- Use summarize() function to find the sum of all Sales.
+
+### 3. Find the city that bought the chairs.
+
+```R
+sales %>% filter(Sub.Category == "Chairs") %>% distinct(City)
+```
+
+Result:
+
+```
+                City
+1          Henderson
+2       Philadelphia
+3            Houston
+4         New Albany
+5               Troy
+6            Chicago
+7            Memphis
+8           Columbia
+9        Los Angeles
+10          Franklin
+.
+(more 180 rows)
+```
+
+Explain
+
+- Use filter() function to filter sub category only "chairs".
+- Use distinct() function to show the city that bought the chairs.
+
+### 4. Find the product name that ordered in 08/08/2017
+
+```R
+sales %>% filter(Order.Date == "08/08/2017") %>% select(ProductName)
+```
+
+Result:
+
+```
+                                                   ProductName
+1                             OIC Bulk Pack Metal Binder Clips
+2   Ink Jet Note and Greeting Cards, 8-1/2" x 5-1/2" Card Size
+3                    Alliance Super-Size Bands, Assorted Sizes
+4         Chromcraft 48" x 96" Racetrack Double Pedestal Table
+5 Kensington 4 Outlet MasterPiece Compact Power Control Center
+6                                    Acco Hanging Data Binders
+7                                                   Xerox 1954
+```
+
+Explain
+
+- Use filter() function to filter the order date to "08/08/2017"
+- Use select() function to show the product name that order in this date.
+
+### 5. What state is the most ordering?
+
+```R
+Mode(sales$State)
+```
+
+Result:
+
+```
+[1] "California"
+attr(,"freq")
+[1] 1946
+```
+
+Explain
+
+- Use Mode() function to find the state that have the most ordering.
+
+### 6. Show 10 ranks of customer names that have the most purchase.
+
+```R
+sales %>% select(Customer.Name, ProductName, Category, Sales) %>% slice_max(Sales, n=10)
+```
+
+Result:
+
+```
+        Customer.Name                                               ProductName        Category     Sales
+1         Sean Miller     Cisco TelePresence System EX90 Videoconferencing Unit      Technology 22638.480
+2        Tamara Chand                     Canon imageCLASS 2200 Advanced Copier      Technology 17499.950
+3        Raymond Buch                     Canon imageCLASS 2200 Advanced Copier      Technology 13999.960
+4        Tom Ashbrook                     Canon imageCLASS 2200 Advanced Copier      Technology 11199.968
+5        Hunter Lopez                     Canon imageCLASS 2200 Advanced Copier      Technology 10499.970
+6       Adrian Barton          GBC Ibimaster 500 Manual ProClick Binding System Office Supplies  9892.740
+7        Sanjit Chand                      Ibico EPK-21 Electric Binding System Office Supplies  9449.950
+8        Bill Shonely          3D Systems Cube Printer, 2nd Generation, Magenta      Technology  9099.930
+9        Sanjit Engle HP Designjet T520 Inkjet Large Format Printer - 24" Color      Technology  8749.950
+10 Christopher Conant                     Canon imageCLASS 2200 Advanced Copier      Technology  8399.976
+```
+
+Explain
+
+- Use select() function to show only customer name, product name, category, sales.
+- Use slice_max() function to show the max of sales and show 10 column.
+
+### 7. Find the product name that in furniture category and have sales more than 3000
+
+```R
+sales %>% select(ProductName, Category, Sales) %>% filter(Category == "Furniture" & Sales > 3000)
+```
+
+Result:
+
+```
+                                                     ProductName  Category    Sales
+1  Riverside Palais Royal Lawyers Bookcase, Royale Cherry Finish Furniture 3083.430
+2                     Bretford Rectangular Conference Table Tops Furniture 3610.848
+3                   HON 5400 Series Task Chairs for Big and Tall Furniture 3504.900
+4  Riverside Palais Royal Lawyers Bookcase, Royale Cherry Finish Furniture 4228.704
+5                          DMI Eclipse Executive Suite Bookcases Furniture 4007.840
+6                   HON 5400 Series Task Chairs for Big and Tall Furniture 4416.174
+7                   HON 5400 Series Task Chairs for Big and Tall Furniture 3785.292
+8       Chromcraft Bull-Nose Wood Oval Conference Tables & Bases Furniture 4297.644
+9                          DMI Eclipse Executive Suite Bookcases Furniture 3406.664
+10 Riverside Palais Royal Lawyers Bookcase, Royale Cherry Finish Furniture 4404.900
+```
+
+Explain
+
+- Use select() function to show only product name, category, sales
+- Use filter() function to filter Category only "Furniture" and sales more than 3000
 
 ## Part 4: Visualization with GGplot2
 
-### 1.) Graph show relation between height and mass
+### 1.
 
 ```R
 scat_plot <- starwars %>% filter(mass<500) %>% ggplot(aes(x=height,y=mass))+
