--- a/assignment/HW04_63130500138/63130500138.md
+++ b/assignment/HW04_63130500138/63130500138.md
@@ -4268,16 +4268,13 @@ market %>% select(Order.ID)%>%filter(market$Ship.Mode == "First Class")%>%distin
 
 #  Part 4: Visualization with GGplot2
 
-1.) Graph show relation between height and mass
+1.) Graph show relation between Product ID and sales more than 12,500
 
-scat_plot <- starwars %>% filter(mass<500) %>% ggplot(aes(x=height,y=mass))+
-  geom_point(aes(color=gender))
+market %>% filter(Sales > 12500)%>%ggplot(aes(x=Product.ID, y=Sales))+geom_point()+ ggtitle("Price of product more than 12500 ")
 
-scat_plot+geom_smooth()
 Result:
 
 Graph 1
 
-**Guideline: Embed Image by using this syntax in markdown file
-
 ![Name](imageFile)
+
