--- a/assignment/HW04_63130500138/63130500138.md
+++ b/assignment/HW04_63130500138/63130500138.md
@@ -574,7 +574,7 @@ Resule:
 2.3 Function str_length() from package Stringr). It using for show length of data.
 
 #Code here 
-```str_length(market$Customer.Name) ```
+```str_length(market$Customer.Name)```
 
 Result:
 ```
@@ -617,7 +617,7 @@ str_length(market$Customer.Name)
 2.3 Function str_c() from package Stringr). It using for list data and separate by comma.
 
 #Code here 
-str_c(market$Row.ID, collapse = ", ")
+```str_c(market$Row.ID, collapse = ", ")```
 
 Result: 
 ```
@@ -2967,7 +2967,7 @@ product_texas <- market%>%select(Product.ID)%>%filter(market$State == "Texas")
 973 OFF-BI-10000977
 ```
 
-5. ในแต่ละวันมีคำสั่งซื้อสินค้าเท่าใด
+5. ในแต่ละวันมี Order สินค้าเท่าใด
 
 #Code here 
 ```
@@ -4270,11 +4270,16 @@ market %>% select(Order.ID)%>%filter(market$Ship.Mode == "First Class")%>%distin
 
 1.) Graph show relation between Product ID and sales more than 12,500
 
-market %>% filter(Sales > 12500)%>%ggplot(aes(x=Product.ID, y=Sales))+geom_point()+ ggtitle("Price of product more than 12500 ")
+```market %>% filter(Sales > 12500)%>%ggplot(aes(x=Product.ID, y=Sales))+geom_point()+ ggtitle("Price of product more than 12500 ")```
 
 Result:
 
-Graph 1
-
 ![Name](imageFile)
+
+2.) Graph show product Id and shipping date that have customer name Corey Roper
+
+```market %>% filter(Customer.Name== "Corey Roper")%>%ggplot(aes(x=Product.ID, y=Ship.Date))+geom_point()+ ggtitle("Product and Shipping Date that have customer name Corey Roper")```
+
+Result:
+
 
