Update and rename 63130500138.md to HW04_63130500138.md

--- a/assignment/HW04_63130500138/HW04_63130500138.md
+++ b/assignment/HW04_63130500138/HW04_63130500138.md
@@ -4274,12 +4274,14 @@ market %>% select(Order.ID)%>%filter(market$Ship.Mode == "First Class")%>%distin
 
 Result:
 
-![Name](imageFile)
+![Graph1](graph1.png)
 
 2.) Graph show product Id and shipping date that have customer name Corey Roper
 
 ```market %>% filter(Customer.Name== "Corey Roper")%>%ggplot(aes(x=Product.ID, y=Ship.Date))+geom_point()+ ggtitle("Product and Shipping Date that have customer name Corey Roper")```
 
 Result:
+
+![Graph2](graph2.png)
 
 
