--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -153,6 +153,46 @@ Result:
 6       Unknown Binding   2
 ```
 
+4.หนังสือที่มีคน review เท่ากับ 0 มีกี่เล่ม เล่มไหนบ้าง
+
+```
+review0 <- com_science %>% select(Book_title,Reviews) %>% filter(com_science$Reviews == 0)
+review0
+count(review0) %>% rename(amount = n)
+```
+
+Result:
+
+```
+> review0
+  Book_title                                                                                                                                      Reviews
+1 Responsive Web Design Overview For Beginners                                                                                                       0
+2 ZX Spectrum Games Code Club: Twenty fun games to code and learn                                                                                    0
+3 Game Programming Golden Rules                                                                                                                      0
+4 Beginners Guide On PHP Programming: Quick And Easy Guide To Learn PHP With My-SQL                                                                  0
+5 Python Programming Books Set: Python Programming for Beginners & Complete Guide for Python Programming                                             0
+6 Your First App: Node.js                                                                                                                            0
+7 Python Programming For Beginners: Quick And Easy Guide For Python Programmers                                                                      0
+8 Building an FPS Game with Unity                                                                                                                    0
+9 Advanced Game Programming: A Gamedev.Net Collection                                                                                                0
+10 Basic Proof Theory                                                                                                                                0
+11 Cross-Platform Game Programming (Game Development) (Charles River Media Game Development)                                                         0
+12 Lambda-Calculus, Combinators and Functional Programming                                                                                           0
+13 The Calculus of Computation: Decision Procedures with Applications to Verification                                                                0
+14 Communication Networks: Fundamental Concepts and Key Architectures                                                                                0
+15 Genetic Programming II: Automatic Discovery of Reusable Programs                                                                                  0
+16 Game Programming Gems 2                                                                                                                           0
+17 Game Programming Gems 5                                                                                                                           0
+18 A First Course in Logic: An Introduction to Model Theory, Proof Theory, Computability, and Complexity                                             0
+19 Game Programming Gems 6                                                                                                                           0
+20 Game Programming Gems 4                                                                                                                           0
+21 Game Programming Gems 3                                                                                                                           0
+22 3D Game Engine Architecture: Engineering Real-Time Applications with Wild Magic (The Morgan Kaufmann Series in Interactive 3d Technology)         0
+
+> count(review0) %>% rename(amount = n)
+  amount
+1     22
+```
 
 ## Part 4: Visualization with GGplot2
 ### 1.) Graph show relation between height and mass
