--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -164,6 +164,7 @@ count(review0) %>% rename(amount = n)
 Result:
 
 ```
+#หนังสือที่มีคน review 0 
 > review0
   Book_title                                                                                                                                      Reviews
 1 Responsive Web Design Overview For Beginners                                                                                                       0
@@ -189,6 +190,7 @@ Result:
 21 Game Programming Gems 3                                                                                                                           0
 22 3D Game Engine Architecture: Engineering Real-Time Applications with Wild Magic (The Morgan Kaufmann Series in Interactive 3d Technology)         0
 
+#มีทั้งหมด 22 เล่ม
 > count(review0) %>% rename(amount = n)
   amount
 1     22
