--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -196,6 +196,40 @@ Result:
 1     22
 ```
 
+5.ค่าเฉลี่ยจำนวนหน้าหนังสือ และหนังสือที่มีหน้าน้อยที่สุดคืออะไร
+
+```
+mean(com_science$Number_Of_Pages)
+com_science %>% select(Book_title,Number_Of_Pages)%>%filter(Number_Of_Pages == min(Number_Of_Pages))
+```
+Result:
+
+```
+> mean(com_science$Number_Of_Pages)
+[1] 475.0775
+> com_science %>% select(Book_title,Number_Of_Pages)%>%filter(Number_Of_Pages == min(Number_Of_Pages))
+  Book_title                                          Number_Of_Pages
+1 Responsive Web Design Overview For Beginners              50
+```
+ค่าเฉลี่ยจำนวนหน้าหนังสือเท่ากับ 475.0775 หน้า และหนังสือที่มีหน้าน้อยที่สุดคือ Responsive Web Design Overview For Beginners มี 50 หน้า
+
+6.หนังสือที่มีราคามากกว่าราคาเฉลี่ยมีทั้งหมดกี่เล่ม
+
+```
+moreThan_mean <- com_science %>% select(Price) %>% filter(Price > mean(com_science$Price))
+count(moreThan_mean)
+```
+
+Result:
+
+```
+> moreThan_mean <- com_science %>% select(Price) %>% filter(Price > mean(com_science$Price))
+> count(moreThan_mean)
+    n
+1 105
+```
+หนังสือที่มีราคามากกว่าราคาเฉลี่ยมีทั้งหมด 105  เล่ม
+
 ## Part 4: Visualization with GGplot2
 ### 1.) Graph show relation between height and mass
 ```
