--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -231,16 +231,13 @@ Result:
 หนังสือที่มีราคามากกว่าราคาเฉลี่ยมีทั้งหมด 105  เล่ม
 
 ## Part 4: Visualization with GGplot2
-### 1.) Graph show relation between height and mass
+### 1.) กราฟแสดงจำนวนหนังสือแต่ละ Type
 ```
-scat_plot <- starwars %>% filter(mass<500) %>% ggplot(aes(x=height,y=mass))+
-  geom_point(aes(color=gender))
-
-scat_plot+geom_smooth()
+ggplot(com_science,aes(x=Type)) + geom_bar()
 ```
 Result:
 
-![Graph 1](graph1.png)
+![Graph 1](Rplot.png)
 
 **Guideline:
 Embed Image by using this syntax in markdown file
