--- a/assignment/HW04_63130500100/HW04_63130500100.md
+++ b/assignment/HW04_63130500100/HW04_63130500100.md
@@ -239,8 +239,11 @@ Result:
 
 ![Graph 1](Rplot.png)
 
-**Guideline:
-Embed Image by using this syntax in markdown file
-````
-![Name](imageFile)
-````
+### 2.) กราฟแสดงหนังสือที่มีจำนวนหน้ามากกว่า 1500 หน้า
+```
+com_science %>% filter(Number_Of_Pages > 1500) %>% ggplot(aes(x=Book_title, y=Number_Of_Pages))+geom_point()+ggtitle("Amount of Page more than 1500")
+```
+Result:
+
+![Graph2](Rplot01.png)
+
