--- a/assignment/HW04_63130500135/HW04_63130500135.md
+++ b/assignment/HW04_63130500135/HW04_63130500135.md
@@ -424,20 +424,29 @@ Explain
 
 ## Part 4: Visualization with GGplot2
 
-### 1.
+### 1. Graph show sales of technology category each sub category.
 
 ```R
-scat_plot <- starwars %>% filter(mass<500) %>% ggplot(aes(x=height,y=mass))+
-  geom_point(aes(color=gender))
+plot1 <- sales %>% filter(sales$Category == "Technology") %>% ggplot(aes(x = Row, y= Sales)) + geom_point(aes(Sub.Category), color = "#ff8070") + ggtitle("Sales of technology category each sub category")
 
-scat_plot+geom_smooth()
+plot1
 ```
+
 Result:
 
-![Graph 1](graph1.png)
+![plotgraph](plot1.png)
 
-**Guideline:
-Embed Image by using this syntax in markdown file
-````md
-![Name](imageFile)
-````
+### 2. Show the pie chart that show the most sold categories products.
+
+```R
+x <- sales %>% count(Category) %>% filter(n >= 0) %>% select(n)
+price <- as.double(unlist(x))
+cate <- sales %>% count(Category) %>% select(-n)
+cat <- as.character(unlist(cateandsub))
+
+piechart <- pie(price, cat)
+```
+
+Result:
+
+![piechart](piechart.png)
